--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -1,70 +1,72 @@
 [dependencies]
-async-trait = {workspace = true}
-common-daft-config = {path = "../common/daft-config", default-features = false}
-common-display = {path = "../common/display", default-features = false}
-common-error = {path = "../common/error", default-features = false}
-common-file-formats = {path = "../common/file-formats", default-features = false}
-common-runtime = {path = "../common/runtime", default-features = false}
-common-scan-info = {path = "../common/scan-info", default-features = false}
-common-system-info = {path = "../common/system-info", default-features = false}
-common-tracing = {path = "../common/tracing", default-features = false}
-daft-core = {path = "../daft-core", default-features = false}
-daft-csv = {path = "../daft-csv", default-features = false}
-daft-dsl = {path = "../daft-dsl", default-features = false}
-daft-functions = {path = "../daft-functions", default-features = false}
-daft-io = {path = "../daft-io", default-features = false}
-daft-json = {path = "../daft-json", default-features = false}
-daft-local-plan = {path = "../daft-local-plan", default-features = false}
-daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
-daft-micropartition = {path = "../daft-micropartition", default-features = false}
-daft-parquet = {path = "../daft-parquet", default-features = false}
-daft-physical-plan = {path = "../daft-physical-plan", default-features = false}
-daft-recordbatch = {path = "../daft-recordbatch", default-features = false}
-daft-scan = {path = "../daft-scan", default-features = false}
-daft-warc = {path = "../daft-warc", default-features = false}
-daft-writers = {path = "../daft-writers", default-features = false}
-futures = {workspace = true}
-indexmap = {workspace = true}
+async-trait = { workspace = true }
+common-daft-config = { path = "../common/daft-config", default-features = false }
+common-display = { path = "../common/display", default-features = false }
+common-error = { path = "../common/error", default-features = false }
+common-file-formats = { path = "../common/file-formats", default-features = false }
+common-runtime = { path = "../common/runtime", default-features = false }
+common-scan-info = { path = "../common/scan-info", default-features = false }
+common-system-info = { path = "../common/system-info", default-features = false }
+common-tracing = { path = "../common/tracing", default-features = false }
+daft-core = { path = "../daft-core", default-features = false }
+daft-csv = { path = "../daft-csv", default-features = false }
+daft-dsl = { path = "../daft-dsl", default-features = false }
+daft-functions = { path = "../daft-functions", default-features = false }
+daft-functions-list = { path = "../daft-functions-list", default-features = false }
+daft-io = { path = "../daft-io", default-features = false }
+daft-json = { path = "../daft-json", default-features = false }
+daft-local-plan = { path = "../daft-local-plan", default-features = false }
+daft-logical-plan = { path = "../daft-logical-plan", default-features = false }
+daft-micropartition = { path = "../daft-micropartition", default-features = false }
+daft-parquet = { path = "../daft-parquet", default-features = false }
+daft-physical-plan = { path = "../daft-physical-plan", default-features = false }
+daft-recordbatch = { path = "../daft-recordbatch", default-features = false }
+daft-scan = { path = "../daft-scan", default-features = false }
+daft-warc = { path = "../daft-warc", default-features = false }
+daft-writers = { path = "../daft-writers", default-features = false }
+futures = { workspace = true }
+indexmap = { workspace = true }
 indicatif = "0.17.9"
-itertools = {workspace = true}
+itertools = { workspace = true }
 kanal = "0.1"
-log = {workspace = true}
-num-format = {workspace = true}
-opentelemetry = {workspace = true}
-parking_lot = {workspace = true}
+log = { workspace = true }
+num-format = { workspace = true }
+opentelemetry = { workspace = true }
+parking_lot = { workspace = true }
 pin-project = "1"
-pyo3 = {workspace = true, optional = true}
-pyo3-async-runtimes = {workspace = true, optional = true}
-snafu = {workspace = true}
-tokio = {workspace = true}
-tokio-util = {workspace = true}
-tracing = {workspace = true}
+pyo3 = { workspace = true, optional = true }
+pyo3-async-runtimes = { workspace = true, optional = true }
+snafu = { workspace = true }
+tokio = { workspace = true }
+tokio-util = { workspace = true }
+tracing = { workspace = true }
 
 [features]
 python = [
-  "dep:pyo3",
-  "dep:pyo3-async-runtimes",
-  "common-daft-config/python",
-  "common-display/python",
-  "common-error/python",
-  "common-file-formats/python",
-  "common-scan-info/python",
-  "daft-core/python",
-  "daft-functions/python",
-  "daft-dsl/python",
-  "daft-io/python",
-  "daft-local-plan/python",
-  "daft-logical-plan/python",
-  "daft-micropartition/python",
-  "daft-physical-plan/python",
-  "daft-scan/python",
-  "daft-writers/python"
+    "dep:pyo3",
+    "dep:pyo3-async-runtimes",
+    "common-daft-config/python",
+    "common-display/python",
+    "common-error/python",
+    "common-file-formats/python",
+    "common-scan-info/python",
+    "daft-core/python",
+    "daft-functions/python",
+    "daft-functions-list/python",
+    "daft-dsl/python",
+    "daft-io/python",
+    "daft-local-plan/python",
+    "daft-logical-plan/python",
+    "daft-micropartition/python",
+    "daft-physical-plan/python",
+    "daft-scan/python",
+    "daft-writers/python",
 ]
 
 [lints]
 workspace = true
 
 [package]
-edition = {workspace = true}
+edition = { workspace = true }
 name = "daft-local-execution"
-version = {workspace = true}
+version = { workspace = true }
