--- a/src/daft-sql/Cargo.toml
+++ b/src/daft-sql/Cargo.toml
@@ -10,6 +10,7 @@ daft-core = {path = "../daft-core"}
 daft-dsl = {path = "../daft-dsl"}
 daft-functions = {path = "../daft-functions"}
 daft-functions-json = {path = "../daft-functions-json"}
+daft-functions-list = {path = "../daft-functions-list"}
 daft-logical-plan = {path = "../daft-logical-plan"}
 daft-micropartition = {path = "../daft-micropartition", default-features = false}
 daft-scan = {path = "../daft-scan"}
@@ -35,6 +36,7 @@ python = [
   "daft-dsl/python",
   "daft-functions/python",
   "daft-functions-json/python",
+  "daft-functions-list/python",
   "daft-logical-plan/python",
   "daft-micropartition/python",
   "daft-scan/python",
