--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -44,8 +44,6 @@ jobs:
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
-    # - name: Setup Sccache
-    #   uses: mozilla-actions/sccache-action@v0.0.9
     - run: pip install uv
     - run: uv pip install twine yq setuptools_scm
 
@@ -75,12 +73,6 @@ jobs:
           echo "CFLAGS=-msse3 -mssse3 -msse4.1 -msse4.2 -mpopcnt -mcx16 -mavx -mavx2 -mfma -mbmi -mbmi2 -mlzcnt -mpclmul -mmovbe -mtune=skylake" >> $GITHUB_ENV
         fi
 
-    # # Rather than setting on each "Build Wheel" step, set it once for the rest of the job
-    # - name: Configure Environment Variables for Sccache
-    #   run: |
-    #     echo "SCCACHE_GHA_ENABLED=true" >> $GITHUB_ENV
-    #     echo "RUSTC_WRAPPER=sccache" >> $GITHUB_ENV
-
     - name: Build dashboard with Bun
       working-directory: ./src/daft-dashboard/frontend
       run: |
@@ -102,21 +94,23 @@ jobs:
         target: x86_64
         manylinux: 2_24
         # only produce sdist for linux x86 to avoid multiple copies
-        args: --profile release --out dist --sdist
+        args: --profile release-lto --out dist --sdist
         sccache: true
       env:
-        SCCACHE_LOG: debug
+        SCCACHE_LOG: info
 
-    # - name: Build wheels - Linux aarch64
-    #   if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'aarch64') }}
-    #   uses: PyO3/maturin-action@v1
-    #   with:
-    #     target: aarch64-unknown-linux-gnu
-    #     manylinux: 2_24
-    #     # only produce sdist for linux x86 to avoid multiple copies
-    #     args: --profile release-lto --out dist --sdist
-    #     before-script-linux: export JEMALLOC_SYS_WITH_LG_PAGE=16
-    #     sccache: true
+    - name: Build wheels - Linux aarch64
+      if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'aarch64') }}
+      uses: PyO3/maturin-action@v1
+      with:
+        target: aarch64-unknown-linux-gnu
+        manylinux: 2_24
+        # only produce sdist for linux x86 to avoid multiple copies
+        args: --profile release-lto --out dist --sdist
+        before-script-linux: export JEMALLOC_SYS_WITH_LG_PAGE=16
+        sccache: true
+      env:
+        SCCACHE_LOG: info
 
     - name: Build wheels - Mac aarch64
       if: ${{ (inputs.os == 'macos') && (inputs.arch == 'aarch64')  }}
