--- a/src/daft-logical-plan/Cargo.toml
+++ b/src/daft-logical-plan/Cargo.toml
@@ -21,6 +21,7 @@ log = {workspace = true}
 num-format = {workspace = true}
 pyo3 = {workspace = true, optional = true}
 serde = {workspace = true, features = ["rc"]}
+serde_json.workspace = true
 snafu = {workspace = true}
 tokio = {workspace = true}
 typed-builder = {workspace = true}
