--- a/src/daft-writers/Cargo.toml
+++ b/src/daft-writers/Cargo.toml
@@ -18,6 +18,7 @@ daft-recordbatch = {path = "../daft-recordbatch", default-features = false, feat
 parquet = {version = "54.2.1"}
 pyo3 = {workspace = true, optional = true}
 tokio = {workspace = true}
+urlencoding = "2.1.3"
 uuid = {version = "1.0", features = ["v4"]}
 
 [features]
