--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,9 @@ nav:
   - Resources:
     - Architecture: resources/architecture.md
     - DataFrame Comparison: resources/dataframe_comparison.md
+    - Feature of the Week:
+      - 00 - Data Access: fotw/00-data-access.ipynb
+      - 01 - Multimodal (Images): fotw/01-images.ipynb
     - Tutorials: resources/tutorials.md
     - Benchmarks: resources/benchmarks/tpch.md # Benchmarks can expand into a folder once we have more
     - Telemetry: resources/telemetry.md
