--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -170,7 +170,7 @@ extra_css:
 extra_javascript:
 - js/custom.js
 - js/docsearch.js
-- js/javascript.js
+- js/readthedocs.js
 - https://cdn.jsdelivr.net/npm/@docsearch/js@3
 
 # Extensions
