--- a/src/daft-logical-plan/Cargo.toml
+++ b/src/daft-logical-plan/Cargo.toml
@@ -25,6 +25,7 @@ snafu = {workspace = true}
 tokio = {workspace = true}
 typed-builder = {workspace = true}
 uuid = {version = "1", features = ["v4"]}
+serde_json.workspace = true
 
 [dev-dependencies]
 daft-dsl = {path = "../daft-dsl", features = ["test-utils"]}
