--- a/src/daft-context/Cargo.toml
+++ b/src/daft-context/Cargo.toml
@@ -1,6 +1,10 @@
 [dependencies]
+arrow2 = {workspace = true}
 common-daft-config = {path = "../common/daft-config", default-features = false}
 common-error = {path = "../common/error", default-features = false}
+daft-core = {path = "../daft-core", default-features = false}
+daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
+daft-micropartition = {path = "../daft-micropartition", default-features = false}
 daft-py-runners = {workspace = true}
 log = {workspace = true}
 pyo3 = {workspace = true, optional = true}
@@ -10,6 +14,9 @@ python = [
   "dep:pyo3",
   "common-daft-config/python",
   "common-error/python",
+  "daft-core/python",
+  "daft-logical-plan/python",
+  "daft-micropartition/python",
   "daft-py-runners/python"
 ]
 
