--- a/src/daft-functions-serde/Cargo.toml
+++ b/src/daft-functions-serde/Cargo.toml
@@ -1,15 +1,10 @@
 [dependencies]
+arrow2 = {workspace = true, features = ["io_json_read"]}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
-jaq-core = {workspace = true}
-jaq-interpret = {workspace = true}
-jaq-parse = {workspace = true}
-jaq-std = {workspace = true}
 serde = {workspace = true}
-serde_json = {workspace = true}
 typetag = {workspace = true}
-itertools.workspace = true
 
 [features]
 python = [
@@ -22,9 +17,5 @@ python = [
 workspace = true
 
 [package]
-name = "daft-functions-json"
+name = "daft-functions-serde"
 edition.workspace = true
-
-[package.metadata.cargo-machete]
-ignored = ["serde"]
-version.workspace = true
