--- a/.github/workflows/property-based-tests.yml
+++ b/.github/workflows/property-based-tests.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.9']
-        daft_runner: [py]
+        daft_runner: [ray, native]
     steps:
     - uses: actions/checkout@v4
     - uses: moonrepo/setup-rust@v1
