--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,6 @@ repo_url: https://github.com/Eventual-Inc/Daft
 nav:
 - Daft User Guide:
   - Overview: index.md
-  - Terminology: terms.md
   - Installation: install.md
   - Quickstart: quickstart.md
   - Core Concepts: core_concepts.md
@@ -45,7 +44,10 @@ nav:
     - Partitioning: advanced/partitioning.md
   - Resources:
     - Architecture: resources/architecture.md
-    - DataFrame Comparison: resources/dataframe_comparison.md
+    - Engine Comparison: resources/engine_comparison.md
+    # - Feature of the Week:
+    #   - 00 - Data Access: fotw/00-data-access.ipynb
+    #   - 01 - Multimodal (Images): fotw/01-images.ipynb
     - Tutorials: resources/tutorials.md
     - Benchmarks: resources/benchmarks/tpch.md # Benchmarks can expand into a folder once we have more
     - Telemetry: resources/telemetry.md
@@ -153,11 +155,11 @@ extra:
   - icon: fontawesome/brands/slack
     link: https://join.slack.com/t/dist-data/shared_invite/zt-2e77olvxw-uyZcPPV1SRchhi8ah6ZCtg
   - icon: fontawesome/brands/linkedin
-    link: https://www.linkedin.com/showcase/daft-dataframe/
+    link: https://www.linkedin.com/showcase/daftengine/
   - icon: fontawesome/brands/x-twitter
-    link: https://x.com/daft_dataframe
+    link: https://x.com/daftengine
   - icon: fontawesome/brands/youtube
-    link: https://www.youtube.com/@daftdf
+    link: https://www.youtube.com/@daftengine
   - icon: simple/substack
     link: https://blog.getdaft.io/
   generator: false
