--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -30,11 +30,11 @@ jobs:
         python-version: ['3.9', '3.10']
         daft-runner: [ray, native]
         pyarrow-version: [8.0.0, 19.0.1]
-        enable-aqe: [1, 0]
+        flotilla: [1, 0]
         os: [ubuntu-latest, macos-latest]
         exclude:
         - daft-runner: native
-          enable-aqe: 1
+          flotilla: 1
         - daft-runner: ray
           pyarrow-version: 8.0.0
         - daft-runner: native
@@ -98,7 +98,7 @@ jobs:
         CARGO_TARGET_DIR: ./target
 
         DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+        DAFT_FLOTILLA: ${{ matrix.flotilla }}
 
     - name: Build library and Test with pytest with code coverage (macOS)
       if: ${{ (runner.os == 'macOS') }}
@@ -121,7 +121,7 @@ jobs:
         CARGO_TARGET_DIR: ./target
 
         DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+        DAFT_FLOTILLA: ${{ matrix.flotilla }}
 
     - name: Upload coverage report
       if: ${{ (runner.os == 'macOS') }}
@@ -218,10 +218,10 @@ jobs:
       matrix:
         python-version: ['3.9']
         daft-runner: [ray, native]
-        enable-aqe: [1, 0]
+        flotilla: [1, 0]
         exclude:
         - daft-runner: native
-          enable-aqe: 1
+          flotilla: 1
     steps:
     - uses: actions/checkout@v4
       with:
@@ -269,7 +269,7 @@ jobs:
         pytest tests/integration/test_tpch.py --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+        DAFT_FLOTILLA: ${{ matrix.flotilla }}
     - name: Send Slack notification on failure
       uses: slackapi/slack-github-action@v2.0.0
       if: ${{ failure() && (github.ref == 'refs/heads/main') }}
@@ -301,10 +301,10 @@ jobs:
       matrix:
         python-version: ['3.9']
         daft-runner: [ray, native]
-        enable-aqe: [1, 0]
+        flotilla: [1, 0]
         exclude:
         - daft-runner: native
-          enable-aqe: 1
+          flotilla: 1
     steps:
     - uses: actions/checkout@v4
       with:
@@ -354,7 +354,7 @@ jobs:
         pytest tests/io -m 'integration' --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+        DAFT_FLOTILLA: ${{ matrix.flotilla }}
     - name: Send Slack notification on failure
       uses: slackapi/slack-github-action@v2.0.0
       if: ${{ failure() && (github.ref == 'refs/heads/main') }}
@@ -388,10 +388,10 @@ jobs:
       matrix:
         python-version: ['3.9']
         daft-runner: [ray, native]
-        enable-aqe: [1, 0]
+        flotilla: [1, 0]
         exclude:
         - daft-runner: native
-          enable-aqe: 1
+          flotilla: 1
     # These permissions are needed to interact with GitHub's OIDC Token endpoint.
     # This is used in the step "Assume GitHub Actions AWS Credentials"
     permissions:
@@ -459,7 +459,7 @@ jobs:
         pytest tests/integration/io -m 'integration and not benchmark' --credentials --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+        DAFT_FLOTILLA: ${{ matrix.flotilla }}
     - name: Send Slack notification on failure
       uses: slackapi/slack-github-action@v2.0.0
       if: ${{ failure() }}
@@ -491,10 +491,10 @@ jobs:
       matrix:
         python-version: ['3.9']
         daft-runner: [ray, native]
-        enable-aqe: [1, 0]
+        flotilla: [1, 0]
         exclude:
         - daft-runner: native
-          enable-aqe: 1
+          flotilla: 1
     steps:
     - uses: actions/checkout@v4
       with:
@@ -545,7 +545,7 @@ jobs:
         pytest tests/integration/iceberg -m 'integration' --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+        DAFT_FLOTILLA: ${{ matrix.flotilla }}
     - name: Send Slack notification on failure
       uses: slackapi/slack-github-action@v2.0.0
       if: ${{ failure() && (github.ref == 'refs/heads/main') }}
@@ -577,10 +577,10 @@ jobs:
       matrix:
         python-version: ['3.9']
         daft-runner: [ray, native]
-        enable-aqe: [1, 0]
+        flotilla: [1, 0]
         exclude:
         - daft-runner: native
-          enable-aqe: 1
+          flotilla: 1
     steps:
     - uses: actions/checkout@v4
       with:
@@ -630,7 +630,7 @@ jobs:
         pytest tests/integration/sql -m 'integration or not integration' --durations=50
       env:
         DAFT_RUNNER: ${{ matrix.daft-runner }}
-        DAFT_ENABLE_AQE: ${{ matrix.enable-aqe }}
+        DAFT_FLOTILLA: ${{ matrix.flotilla }}
     - name: Send Slack notification on failure
       uses: slackapi/slack-github-action@v2.0.0
       if: ${{ failure() && (github.ref == 'refs/heads/main') }}
