--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -23,7 +23,7 @@ concurrency:
 
 jobs:
   skipcheck:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     outputs:
       skip: ${{ steps.filter.outputs.skip }}
     steps:
@@ -37,7 +37,7 @@ jobs:
 
         if git diff --quiet origin/$BASE -- \
           . \
-          ':.vscode/**' \
+          ':!.vscode/**' \
           ':!ci/**' \
           ':!docs/**' \
           ':!.git-blame-ignore-revs' \
@@ -59,7 +59,7 @@ jobs:
 
   unit-test:
     needs: skipcheck
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 45
     strategy:
@@ -204,7 +204,7 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     needs: [skipcheck, unit-test]
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     steps:
     - name: All tests ok
       if: ${{ !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) }}
@@ -215,7 +215,7 @@ jobs:
 
   integration-test-build:
     needs: skipcheck
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     env:
@@ -271,7 +271,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [skipcheck, integration-test-build]
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     env:
       package-name: daft
     strategy:
@@ -351,7 +351,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [skipcheck, integration-test-build]
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     env:
       package-name: daft
     strategy:
@@ -436,7 +436,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [skipcheck, integration-test-build]
-    if: needs.skipcheck.outputs.skip == 'false' && ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ needs.skipcheck.outputs.skip == 'false' && github.ref == 'refs/heads/main' }}
     env:
       package-name: daft
     strategy:
@@ -539,7 +539,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [skipcheck, integration-test-build]
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     env:
       package-name: daft
     strategy:
@@ -625,7 +625,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [skipcheck, integration-test-build]
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     env:
       package-name: daft
     strategy:
@@ -710,7 +710,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [skipcheck, integration-test-build]
-    if: needs.skipcheck.outputs.skip == 'false'
+    if: ${{ needs.skipcheck.outputs.skip == 'false' }}
     env:
       package-name: daft
     strategy:
@@ -797,7 +797,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [skipcheck, integration-test-build]
-    if: needs.skipcheck.outputs.skip == 'false' && ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ needs.skipcheck.outputs.skip == 'false' && github.ref == 'refs/heads/main' }}
     env:
       package-name: daft
     strategy:
